--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 <body data-theme="dark">
 
 <header>
-  <h1>🎀 Countdown & Timers</h1>
+  <h1> 🗁 Ta-da List ✎⋆⭒˚.⋆ </h1>
   <button id="theme-toggle" aria-label="Toggle light/dark theme" title="Toggle theme">
     <!-- Sun icon (light) -->
     <svg id="icon-sun" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" style="display:none;">
