--- a/index.html
+++ b/index.html
@@ -1701,7 +1701,7 @@
     chatSendBtn.disabled = true;
 
     try {
-      const response = await fetch('/api/chat', {
+      const response = await fetch('https://replit.com/@2023bradleyneva/notion-ai-backend', {
         method: 'POST',
         headers: {'Content-Type': 'application/json'},
         body: JSON.stringify({message})
